# cross-border-disaster-aid-allocation-simulator

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-checks.yml
configs/: synthetic_lab.yaml
data/: README.md
docs/: humanitarian_ethics_policy.md  methodology.md  report_template.md  synthetic_lab.md
matlab/: plot_aid_metrics.m
notebooks/: 01_synthetic_aid_allocation_lab.ipynb
scripts/: run_synthetic_aid_lab.py
src/aidalloc/: __init__.py  audit.py  config.py  fairness.py  logistics.py  optimizer.py  reporting.py  scoring.py  synthetic.py  visualization.py
tests/: test_allocation_fairness.py  test_audit.py  test_pipeline.py  test_synthetic.py
