[project]
name = "cross-border-disaster-aid-allocation-simulator"
version = "0.1.0"
description = "Synthetic cross-border disaster aid allocation simulator with fairness, urgency, logistics, and transparency metrics."
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26,<3",
  "pandas>=2.1,<3",
  "matplotlib>=3.8,<4",
  "PyYAML>=6.0,<7"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
